--- a/docs/mdx/ripple.mdx
+++ b/docs/mdx/ripple.mdx
@@ -5,7 +5,7 @@ menu: components
 ---
 
 import Header from '../src/components/header'
-import { Playground, PropsTable } from 'docz'
+import { Playground, Props } from 'docz'
 import { Ripple } from '@coffee-shope/ripple';
 import Row from '../src/components/row';
 
